--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,18 @@ jobs:
         brew install cmake
 
     - name: Configure CMake
-      run: cmake -B build -S . -G Xcode
+      run: |
+        export PKG_CONFIG_PATH="/opt/homebrew/lib/pkgconfig:$PKG_CONFIG_PATH"
+        export LIBRARY_PATH="/opt/homebrew/lib:$LIBRARY_PATH"
+        cmake -B build -S . -G Xcode \
+          -DCMAKE_PREFIX_PATH="/opt/homebrew" \
+          -DCMAKE_LIBRARY_PATH="/opt/homebrew/lib" \
+          -DCMAKE_INCLUDE_PATH="/opt/homebrew/include"
 
     - name: Build
-      run: cmake --build build --config Release
+      run: |
+        export LIBRARY_PATH="/opt/homebrew/lib:$LIBRARY_PATH"
+        cmake --build build --config Release
 
     - name: Run Tests
       working-directory: build
@@ -53,7 +61,12 @@ jobs:
 
     - name: Build Release
       run: |
-        cmake -B build -S . -G Xcode
+        export PKG_CONFIG_PATH="/opt/homebrew/lib/pkgconfig:$PKG_CONFIG_PATH"
+        export LIBRARY_PATH="/opt/homebrew/lib:$LIBRARY_PATH"
+        cmake -B build -S . -G Xcode \
+          -DCMAKE_PREFIX_PATH="/opt/homebrew" \
+          -DCMAKE_LIBRARY_PATH="/opt/homebrew/lib" \
+          -DCMAKE_INCLUDE_PATH="/opt/homebrew/include"
         cmake --build build --config Release
 
     - name: Create Release
